# arc-chat

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_CN.md  README_EN.md  build.sh  release.sh  sync.sh
conf/: default.toml
docs/: node_discovery.md
src/: err.rs  main.rs  server.rs  util.rs
src/model/: mod.rs
src/router/: api.rs  mod.rs  ws.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx
web/src/assets/: icon.css
web/src/comps/: Base.jsx  ChatHelper.js  Command.jsx  CommandHelper.js  Form.jsx  Invitation.jsx  Join.jsx  MediaMsg.jsx  Notifier.jsx  Sidebar.css  Sidebar.jsx  Voice.css  Voice.jsx
web/src/stores/: chat.js
web/src/utils/: app.js  main.js  notification.js  ws.js
web/src/views/: Chat.jsx  Guard.jsx  Home.jsx  Lock.jsx  PrivShare.jsx  Roaming.jsx  RoomChat.jsx  RoomMgr.jsx  Setting.jsx  Share.jsx
