[package]
name = "arc"
version = "0.1.7"
edition = "2024"
default-run = "arc"
license = "Apache-2.0"
keywords = ["chat", "e2ee", "anonymous", "relay", "self-hosting"]

#[features]

[dependencies]
air = { path = "air", package = "air" }
base = { path = "base", package = "base", features = ["req"] }

log = "^0.4"

axum = { version = "^0.8", features = ["ws","multipart"] }
tower-http = { version = "^0.6", features = ["fs"] }

rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "^0.3"

mainline = "5.4.0"
dashmap = "6.1.0"

nanoid = "0.4.0"
base64ct = { version = "1", features = ["alloc"] }

[profile.release]  
lto = true # too slow
# opt-level = "z"  # default: 3
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
